Blanc - 2 versions - server

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -7940,7 +7940,7 @@ mob_db: (
 	Lv: 129
 	Hp: 50150
 	Sp: 80
-	Exp: 500000
+	Exp: 150000
 	JExp: 1000
 	AttackRange: 2
 	Attack: [200, 350]
@@ -8979,6 +8979,104 @@ mob_db: (
 		LeprechaunHat: 10
 		LeprechaunHead: 5
 		Rainerang: 5
+	}
+},
+{
+	Id: 1197
+	SpriteName: "Blanc"
+	Name: "Blanc1"
+	Lv: 120
+	Hp: 55055
+	Sp: 0
+	Exp: 300000
+	JExp: 3000
+	AttackRange: 9
+	Attack: [300, 500]
+	Def: 50
+	Mdef: 60
+	CriticalDef: 30
+	Stats: {
+		Str: 30
+		Agi: 99
+		Vit: 80
+		Int: 33
+		Dex: 123
+		Luk: 123
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 1
+	Element: (7, 3)
+	Mode: {
+		CanMove: true
+		Aggressive: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 200
+	AttackDelay: 350
+	AttackMotion: 672
+	DamageMotion: 200
+	Drops: {
+		CoinBag: 10000
+		CoinBag: 500
+		CoinBag: 500
+		CrazyRum: 750
+		CrazyRum: 750
+		CasinoCoins: 250
+		CasinoCoins: 250
+		HMCPirateHat: 3
+	}
+},
+{
+	Id: 1198
+	SpriteName: "Blanc"
+	Name: "Blanc2"
+	Lv: 120
+	Hp: 33033
+	Sp: 0
+	Exp: 200000
+	JExp: 2000
+	AttackRange: 2
+	Attack: [150, 250]
+	Def: 50
+	Mdef: 60
+	CriticalDef: 30
+	Stats: {
+		Str: 30
+		Agi: 99
+		Vit: 80
+		Int: 33
+		Dex: 123
+		Luk: 123
+	}
+	ViewRange: 6
+	ChaseRange: 6
+	Size: 1
+	Race: 1
+	Element: (7, 3)
+	Mode: {
+		CanMove: true
+		Aggressive: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 200
+	AttackDelay: 200
+	AttackMotion: 672
+	DamageMotion: 200
+	Drops: {
+		CoinBag: 10000
+		CoinBag: 500
+		CoinBag: 500
+		CrazyRum: 750
+		CrazyRum: 750
+		CasinoCoins: 250
+		CasinoCoins: 250
+		HMCPirateHat: 2
 	}
 },
 )
