--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1357,8 +1357,8 @@ item_db: (
 },
 {
 	Id: 5284
-	AegisName: "Revolver"
-	Name: "Revolver"
+	AegisName: "Flintlock"
+	Name: "Flintlock"
 	Type: "IT_WEAPON"
 	Buy: 150000
 	Sell: 500
