git sucks when servers have interruptions
Please tell me this works this time!!!

****

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1358,7 +1358,7 @@ item_db: (
 {
 	Id: 5284
 	AegisName: "Flintlock"
-	Name: "Flintlock Pistol"
+	Name: "Flintlock"
 	Type: "IT_WEAPON"
 	Buy: 150000
 	Sell: 500
