Name clash correction

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -8983,8 +8983,8 @@ mob_db: (
 },
 {
 	Id: 1197
-	SpriteName: "Blanc"
-	Name: "Blanc1"
+	SpriteName: "Blanc1"
+	Name: "Blanc 1"
 	Lv: 120
 	Hp: 55055
 	Sp: 0
@@ -9032,8 +9032,8 @@ mob_db: (
 },
 {
 	Id: 1198
-	SpriteName: "Blanc"
-	Name: "Blanc2"
+	SpriteName: "Blanc2"
+	Name: "Blanc 2"
 	Lv: 120
 	Hp: 33033
 	Sp: 0
