Fix char creation stat point allocation - serverdata part

--- a/world/conf/char_athena.conf
+++ b/world/conf/char_athena.conf
@@ -55,7 +55,8 @@ min_stat_value: 1
 max_stat_value: 10
 
 // the sum of all stats combined on creation (str + agi + int + ...)
-total_stat_sum: 27
+// 48 / 2 = 24. You start with 1 in all of 6 -> need 24+6 = 30
+total_stat_sum: 30
 
 // Filename of the file which receives the online players list in text
 online_txt_filename: online.txt
