Enhanced a few mobs again

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -7898,23 +7898,23 @@ mob_db: (
 	Id: 1173
 	SpriteName: "MontBlanc"
 	Name: "Mont Blanc"
-	Lv: 100
+	Lv: 110
 	Hp: 30000
 	Sp: 0
-	Exp: 88000
-	JExp: 200
+	Exp: 100300
+	JExp: 500
 	AttackRange: 12
-	Attack: [357, 777]
-	Def: 80
-	Mdef: 60
-	CriticalDef: 80
+	Attack: [777, 1000]
+	Def: 70
+	Mdef: 90
+	CriticalDef: 90
 	Stats: {
 		Str: 30
 		Agi: 1
 		Vit: 100
 		Int: 1
-		Dex: 100
-		Luk: 100
+		Dex: 120
+		Luk: 120
 	}
 	Mode: {
 		Aggressive: true
@@ -7928,8 +7928,7 @@ mob_db: (
 	Size: 1
 	Race: 3
 	Element: (2, 1)
-	MoveSpeed: 800
-	AttackDelay: 2000
+	AttackDelay: 4000
 	AttackMotion: 672
 	DamageMotion: 480
 },
@@ -7943,20 +7942,20 @@ mob_db: (
 	Exp: 150000
 	JExp: 1000
 	AttackRange: 2
-	Attack: [200, 350]
+	Attack: [250, 450]
 	Def: 30
 	Mdef: 60
 	CriticalDef: 60
 	Stats: {
-		Str: 70
+		Str: 80
 		Agi: 60
 		Vit: 100
 		Int: 60
-		Dex: 90
-		Luk: 90
+		Dex: 110
+		Luk: 110
 	}
 	ViewRange: 40
-	ChaseRange: 10
+	ChaseRange: 30
 	Size: 1
 	Race: 1
 	Element: (1, 2)
@@ -8041,7 +8040,7 @@ mob_db: (
 	Exp: 5533
 	JExp: 733
 	AttackRange: 4
-	Attack: [213, 333]
+	Attack: [333, 555]
 	Def: 20
 	Mdef: 25
 	CriticalDef: 50
@@ -8050,8 +8049,8 @@ mob_db: (
 		Agi: 15
 		Vit: 30
 		Int: 1
-		Dex: 100
-		Luk: 113
+		Dex: 130
+		Luk: 130
 	}
 	ViewRange: 7
 	ChaseRange: 11
@@ -8104,7 +8103,7 @@ mob_db: (
 		Vit: 0
 		Int: 0
 		Dex: 255
-		Luk: 13
+		Luk: 33
 	}
 	ViewRange: 1
 	ChaseRange: 1
@@ -8494,7 +8493,7 @@ mob_db: (
 	Lv: 130
 	Hp: 45000
 	Sp: 280
-	Exp: 48000
+	Exp: 58000
 	JExp: 1600
 	AttackRange: 2
 	Attack: [200, 250]
@@ -8926,7 +8925,7 @@ mob_db: (
 		ChangeTargetChase: true
 	}
 	MoveSpeed: 77
-	AttackDelay: 2000
+	AttackDelay: 100
 	AttackMotion: 672
 	DamageMotion: 200
 },
@@ -8941,9 +8940,9 @@ mob_db: (
 	JExp: 777
 	AttackRange: 7
 	Attack: [123, 321]
-	Def: 11
-	Mdef: 33
-	CriticalDef: 22
+	Def: 33
+	Mdef: 55
+	CriticalDef: 44
 	Stats: {
 		Str: 30
 		Agi: 99
@@ -8965,11 +8964,10 @@ mob_db: (
 		ChangeTargetChase: true
 	}
 	MoveSpeed: 120
-	AttackDelay: 321
+	AttackDelay: 555
 	AttackMotion: 672
 	DamageMotion: 200
 	Drops: {
-		CoinBag: 500
 		CoinBag: 500
 		CoinBag: 500
 		CoinBag: 1000
@@ -8979,31 +8977,32 @@ mob_db: (
 		LeprechaunHat: 10
 		LeprechaunHead: 5
 		Rainerang: 5
+		GoldenTooth: 10000
 	}
 },
 {
 	Id: 1197
 	SpriteName: "Blanc1"
 	Name: "Blanc 1"
-	Lv: 120
+	Lv: 150
 	Hp: 55055
 	Sp: 0
 	Exp: 300000
 	JExp: 3000
-	AttackRange: 9
-	Attack: [300, 500]
+	AttackRange: 10
+	Attack: [600, 800]
 	Def: 50
-	Mdef: 60
-	CriticalDef: 30
+	Mdef: 70
+	CriticalDef: 60
 	Stats: {
 		Str: 30
 		Agi: 99
 		Vit: 80
 		Int: 33
-		Dex: 123
-		Luk: 123
+		Dex: 133
+		Luk: 133
 	}
-	ViewRange: 9
+	ViewRange: 10
 	ChaseRange: 10
 	Size: 1
 	Race: 1
@@ -9014,9 +9013,10 @@ mob_db: (
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
+		Looter: true
 	}
 	MoveSpeed: 200
-	AttackDelay: 350
+	AttackDelay: 500
 	AttackMotion: 672
 	DamageMotion: 200
 	Drops: {
@@ -9034,23 +9034,23 @@ mob_db: (
 	Id: 1198
 	SpriteName: "Blanc2"
 	Name: "Blanc 2"
-	Lv: 120
+	Lv: 150
 	Hp: 33033
 	Sp: 0
 	Exp: 200000
 	JExp: 2000
 	AttackRange: 2
-	Attack: [150, 250]
+	Attack: [250, 350]
 	Def: 50
-	Mdef: 60
-	CriticalDef: 30
+	Mdef: 70
+	CriticalDef: 60
 	Stats: {
 		Str: 30
 		Agi: 99
 		Vit: 80
 		Int: 33
-		Dex: 123
-		Luk: 123
+		Dex: 133
+		Luk: 133
 	}
 	ViewRange: 6
 	ChaseRange: 6
@@ -9063,9 +9063,10 @@ mob_db: (
 		CanAttack: true
 		ChangeTargetMelee: true
 		ChangeTargetChase: true
+		Looter: true
 	}
 	MoveSpeed: 200
-	AttackDelay: 200
+	AttackDelay: 300
 	AttackMotion: 672
 	DamageMotion: 200
 	Drops: {
