Lucky item buff - keeping my word

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -13945,7 +13945,7 @@ item_db: (
 	Buy: 1000
 	Sell: 500
 	Weight: 50
-	Def: 3
+	Def: 5
 	Slots: 0
 	Loc: "EQP_HEAD_TOP"
 	Refine: false
@@ -13993,6 +13993,9 @@ item_db: (
 	Loc: "EQP_HEAD_TOP"
 	Refine: false
 	ViewSprite: 5280
+	Script: <"
+		bonus bLuk, 1;
+	">
 },
 {
 	Id: 5281
