item adds/changes

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -2248,8 +2248,8 @@ item_db: (
 },
 {
 	Id: 505
-	AegisName: "MaggotSlime"
-	Name: "MaggotSlime"
+	AegisName: "InsectSlime"
+	Name: "InsectSlime"
 	Type: "IT_ETC"
 	Buy: 8
 	Sell: 4
@@ -2308,8 +2308,8 @@ item_db: (
 },
 {
 	Id: 518
-	AegisName: "BugLeg"
-	Name: "BugLeg"
+	AegisName: "InsectLeg"
+	Name: "Insect Leg"
 	Type: "IT_ETC"
 	Buy: 100
 	Sell: 25
@@ -5272,7 +5272,7 @@ item_db: (
 },
 {
 	Id: 5279
-	AegisName: "Carrot"
+	AegisName: "LegendaryCarrot"
 	Name: "Legendary Carrot"
 	Type: "IT_ETC"
 	Buy: 0
@@ -5600,6 +5600,269 @@ item_db: (
 	Def: 0
 	Refine: false
 	ViewSprite: 5332
+},
+{
+	Id: 5355
+	AegisName: "TortugaShellFragment"
+	Name: "Tortuga Shell Fragment"
+	Type: "IT_ETC"
+	Buy: 500
+	Sell: 250
+	Weight: 25
+	Refine: false
+	ViewSprite: 5355
+},
+{
+	Id: 5356
+	AegisName: "TortugaShell"
+	Name: "Tortuga Shell"
+	Type: "IT_ETC"
+	Buy: 2000
+	Sell: 1000
+	Weight: 100
+	Refine: false
+	ViewSprite: 5356
+},
+{
+	Id: 5357
+	AegisName: "RattoTail"
+	Name: "Ratto Tail"
+	Type: "IT_ETC"
+	Buy: 300
+	Sell: 150
+	Weight: 1
+	Refine: false
+	ViewSprite: 5357
+},
+{
+	Id: 5358
+	AegisName: "RattoTeeth"
+	Name: "Ratto Teeth"
+	Type: "IT_ETC"
+	Buy: 300
+	Sell: 150
+	Weight: 1
+	Refine: false
+	ViewSprite: 5358
+},
+{
+	Id: 5359
+	AegisName: "SilverKey"
+	Name: "Silver Key"
+	Type: "IT_ETC"
+	Buy: 2000
+	Sell: 1000
+	Weight: 10
+	Refine: false
+	ViewSprite: 5359
+	Trade: {
+		notrade: true
+		nodrop: true
+		nocart: true
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
+},
+{
+	Id: 5360
+	AegisName: "MushroomSpores"
+	Name: "Mushroom Spores"
+	Type: "IT_ETC"
+	Buy: 500
+	Sell: 250
+	Weight: 1
+	Refine: false
+	ViewSprite: 5360
+},
+{
+	Id: 5361
+	AegisName: "Snowflake"
+	Name: "Snowflake"
+	Type: "IT_ETC"
+	Buy: 500
+	Sell: 250
+	Weight: 0
+	Refine: false
+	ViewSprite: 5361
+},
+{
+	Id: 5362
+	AegisName: "BeeStinger"
+	Name: "Bee Stinger"
+	Type: "IT_ETC"
+	Buy: 50
+	Sell: 25
+	Weight: 5
+	Refine: false
+	ViewSprite: 5362
+},
+{
+	Id: 5363
+	AegisName: "Flour"
+	Name: "Flour"
+	Type: "IT_ETC"
+	Buy: 250
+	Sell: 100
+	Weight: 80
+	Refine: false
+	ViewSprite: 5363
+},
+{
+	Id: 5365
+	AegisName: "DuckFeather"
+	Name: "Duck Feather"
+	Type: "IT_ETC"
+	Buy: 1000
+	Sell: 500
+	Weight: 1
+	Refine: false
+	ViewSprite: 5365
+},
+{
+	Id: 5366
+	AegisName: "CrocClaw"
+	Name: "Croc Claw"
+	Type: "IT_ETC"
+	Buy: 60
+	Sell: 30
+	Weight: 10
+	Refine: false
+	ViewSprite: 5366
+},
+{
+	Id: 5367
+	AegisName: "ScorpionClaw"
+	Name: "Scorpion Claw"
+	Type: "IT_ETC"
+	Buy: 60
+	Sell: 30
+	Weight: 15
+	Refine: false
+	ViewSprite: 5367
+},
+{
+	Id: 5368
+	AegisName: "RedScorpionClaw"
+	Name: "Red Scorpion Claw"
+	Type: "IT_ETC"
+	Buy: 80
+	Sell: 40
+	Weight: 15
+	Refine: false
+	ViewSprite: 5368
+},
+{
+	Id: 5369
+	AegisName: "BlackScorpionClaw"
+	Name: "Black Scorpion Claw"
+	Type: "IT_ETC"
+	Buy: 160
+	Sell: 80
+	Weight: 15
+	Refine: false
+	ViewSprite: 5369
+},
+{
+	Id: 5370
+	AegisName: "GoldenScorpionClaw"
+	Name: "Golden Scorpion Claw"
+	Type: "IT_ETC"
+	Buy: 600
+	Sell: 75
+	Weight: 65
+	Refine: false
+	ViewSprite: 5370
+	Trade: {
+		notrade: true
+		nodrop: true
+		nocart: true
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
+},
+{
+	Id: 5371
+	AegisName: "DragonScales"
+	Name: "Dragon Scales"
+	Type: "IT_ETC"
+	Buy: 8000
+	Sell: 750
+	Weight: 400
+	Refine: false
+	ViewSprite: 5371
+	Trade: {
+		notrade: true
+		nodrop: true
+		nocart: true
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
+},
+{
+	Id: 5372
+	AegisName: "DragonHorn"
+	Name: "Dragon Horn"
+	Type: "IT_ETC"
+	Buy: 90000
+	Sell: 4000
+	Weight: 1000
+	Refine: false
+	ViewSprite: 5372
+	Trade: {
+		notrade: true
+		nodrop: true
+		nocart: true
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	}
+},
+{
+	Id: 5375
+	AegisName: "JunglefowlFeather"
+	Name: "JunglefowlFeather"
+	Type: "IT_ETC"
+	Buy: 4000
+	Sell: 2000
+	Weight: 1
+	Refine: false
+	ViewSprite: 5375
+},
+{
+	Id: 5376
+	AegisName: "KingChonkyBirbFeather"
+	Name: "KingChonkyBirbFeather"
+	Type: "IT_ETC"
+	Buy: 6000
+	Sell: 3000
+	Weight: 1
+	Refine: false
+	ViewSprite: 5376
+},
+{
+	Id: 5377
+	AegisName: "Honeycomb"
+	Name: "Honeycomb"
+	Type: "IT_ETC"
+	Buy: 200
+	Sell: 100
+	Weight: 11
+	Refine: false
+	ViewSprite: 5377
+},
+{
+	Id: 5378
+	AegisName: "Beeswax"
+	Name: "Beeswax"
+	Type: "IT_ETC"
+	Buy: 2000
+	Sell: 1000
+	Weight: 10
+	Refine: false
+	ViewSprite: 5378
 },
 /* Chest Armor */
 {
@@ -14432,8 +14695,8 @@ item_db: (
 },
 {
 	Id: 562
-	AegisName: "ChickenLeg"
-	Name: "ChickenLeg"
+	AegisName: "BirdLeg"
+	Name: "BirdLeg"
 	Type: "IT_USABLE"
 	Buy: 250
 	Sell: 125
@@ -15958,9 +16221,9 @@ item_db: (
 	AegisName: "Honey"
 	Name: "Honey"
 	Type: "IT_USABLE"
-	Buy: 150
-	Sell: 75
-	Weight: 4
+	Buy: 300
+	Sell: 150
+	Weight: 10
 	Refine: false
 	ViewSprite: 5312
 	Script: <"
@@ -16011,12 +16274,402 @@ item_db: (
 	Buy: 25
 	Sell: 6
 	Weight: 5
-	Def: 0
-	Slots: 0
 	Refine: false
 	ViewSprite: 5331
 	Script: <"
 		callfunc "itheal", 50, 0;
+	">
+},
+{
+	Id: 5333
+	AegisName: "Bread"
+	Name: "Bread"
+	Type: "IT_USABLE"
+	Buy: 80
+	Sell: 40
+	Weight: 25
+	Refine: false
+	ViewSprite: 5333
+	Script: <"
+		callfunc "itheal", 100, 0;
+	">
+},
+{
+	Id: 5334
+	AegisName: "Fungus"
+	Name: "Fungus"
+	Type: "IT_USABLE"
+	Buy: 300
+	Sell: 150
+	Weight: 8
+	Refine: false
+	ViewSprite: 5334
+	Script: <"
+		callfunc "itheal", 350, 100;
+	">
+},
+{
+	Id: 5335
+	AegisName: "Cheese"
+	Name: "Cheese"
+	Type: "IT_USABLE"
+	Buy: 100
+	Sell: 50
+	Weight: 3
+	Refine: false
+	ViewSprite: 5335
+	Script: <"
+		callfunc "itheal", 150, 0;
+	">
+},
+{
+	Id: 5336
+	AegisName: "LettuceLeaf"
+	Name: "Lettuce Leaf"
+	Type: "IT_USABLE"
+	Buy: 90
+	Sell: 45
+	Weight: 1
+	Refine: false
+	ViewSprite: 5336
+	Script: <"
+		callfunc "itheal", 120, 0;
+	">
+},
+{
+	Id: 5337
+	AegisName: "Piberries"
+	Name: "Piberries"
+	Type: "IT_USABLE"
+	Buy: 120
+	Sell: 60
+	Weight: 2
+	Refine: false
+	ViewSprite: 5337
+	Script: <"
+		callfunc "itheal", 140, 0;
+	">
+},
+{
+	Id: 5338
+	AegisName: "Croconut"
+	Name: "Croconut"
+	Type: "IT_USABLE"
+	Buy: 420
+	Sell: 210
+	Weight: 80
+	Refine: false
+	ViewSprite: 5338
+	Script: <"
+		getitem HalfCroconut, 2;
+	">
+},
+{
+	Id: 5339
+	AegisName: "HalfCroconut"
+	Name: "Half Croconut"
+	Type: "IT_USABLE"
+	Buy: 210
+	Sell: 105
+	Weight: 38
+	Refine: false
+	ViewSprite: 5339
+	Script: <"
+		callfunc "itheal", 400, 0;
+	">
+},
+{
+	Id: 5340
+	AegisName: "DeliciousCookie"
+	Name: "Delicious Cookie"
+	Type: "IT_USABLE"
+	Buy: 230
+	Sell: 115
+	Weight: 2
+	Refine: false
+	ViewSprite: 5340
+	Script: <"
+		callfunc "itheal", 450, 0;
+	">
+},
+{
+	Id: 5341
+	AegisName: "Manana"
+	Name: "Manana"
+	Type: "IT_USABLE"
+	Buy: 180
+	Sell: 90
+	Weight: 10
+	Refine: false
+	ViewSprite: 5341
+	Script: <"
+		callfunc "itheal", 350, 0;
+	">
+},
+{
+	Id: 5342
+	AegisName: "Carrot"
+	Name: "Carrot"
+	Type: "IT_USABLE"
+	Buy: 150
+	Sell: 75
+	Weight: 3
+	Refine: false
+	ViewSprite: 5342
+	Script: <"
+		callfunc "itheal", 200, 0;
+	">
+},
+{
+	Id: 5343
+	AegisName: "PumpkinJuice"
+	Name: "Pumpkin Juice"
+	Type: "IT_USABLE"
+	Buy: 50
+	Sell: 25
+	Weight: 4
+	Refine: false
+	ViewSprite: 5343
+	Script: <"
+		callfunc "itheal", 50, 0;
+	">
+},
+{
+	Id: 5344
+	AegisName: "ChocolateBiscuit"
+	Name: "Chocolate Biscuit"
+	Type: "IT_USABLE"
+	Buy: 80
+	Sell: 40
+	Weight: 5
+	Refine: false
+	ViewSprite: 5344
+	Script: <"
+		callfunc "itheal", 100, 0;
+	">
+},
+{
+	Id: 5345
+	AegisName: "ChocolateBunny"
+	Name: "Chocolate Bunny"
+	Type: "IT_USABLE"
+	Buy: 175
+	Sell: 88
+	Weight: 12
+	Refine: false
+	ViewSprite: 5345
+	Script: <"
+		callfunc "itheal", 250, 0;
+	">
+},
+{
+	Id: 5346
+	AegisName: "Potatoz"
+	Name: "Potatoz"
+	Type: "IT_USABLE"
+	Buy: 230
+	Sell: 115
+	Weight: 8
+	Refine: false
+	ViewSprite: 5346
+	Script: <"
+		callfunc "itheal", 450, 0;
+	">
+},
+{
+	Id: 5347
+	AegisName: "Pumpkin"
+	Name: "Pumpkin"
+	Type: "IT_USABLE"
+	Buy: 170
+	Sell: 85
+	Weight: 120
+	Refine: false
+	ViewSprite: 5347
+	Script: <"
+		callfunc "itheal", 300, 0;
+	">
+},
+{
+	Id: 5348
+	AegisName: "FruitSalad"
+	Name: "FruitSalad"
+	Type: "IT_USABLE"
+	Buy: 240
+	Sell: 120
+	Weight: 10
+	Refine: false
+	ViewSprite: 5348
+	Script: <"
+		callfunc "itheal", 475, 0;
+	">
+},
+{
+	Id: 5349
+	AegisName: "DuckEgg"
+	Name: "Duck Egg"
+	Type: "IT_USABLE"
+	Buy: 200
+	Sell: 100
+	Weight: 4
+	Refine: false
+	ViewSprite: 5349
+	Script: <"
+		callfunc "itheal", 150, 50;
+	">
+},
+{
+	Id: 5350
+	AegisName: "Dragonfruit"
+	Name: "Dragonfruit"
+	Type: "IT_USABLE"
+	Buy: 230
+	Sell: 115
+	Weight: 14
+	Refine: false
+	ViewSprite: 5350
+	Script: <"
+		callfunc "itheal", 600, 0;
+	">
+},
+{
+	Id: 5351
+	AegisName: "PirateTreasureMap"
+	Name: "Pirate Treasure Map"
+	Type: "IT_USABLE"
+	Buy: 45000
+	Sell: 5000
+	Weight: 14
+	Refine: false
+	ViewSprite: 5351
+	KeepAfterUse: true
+	Trade: {
+		notrade: true
+		nodrop: true
+		nocart: true
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	Script: <"
+		getitem PirateTreasureMap, 1;
+	">
+	}
+},
+{
+	Id: 5352
+	AegisName: "DungeonMap"
+	Name: "Dungeon Map"
+	Type: "IT_USABLE"
+	Buy: 45000
+	Sell: 5000
+	Weight: 14
+	Refine: false
+	ViewSprite: 5352
+	KeepAfterUse: true
+	Trade: {
+		notrade: true
+		nodrop: true
+		nocart: true
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	Script: <"
+		getitem DungeonMap, 1;
+	">
+	}
+},
+{
+	Id: 5353
+	AegisName: "TreasureMap"
+	Name: "Treasure Map"
+	Type: "IT_USABLE"
+	Buy: 45000
+	Sell: 5000
+	Weight: 14
+	Refine: false
+	ViewSprite: 5353
+	KeepAfterUse: true
+	Trade: {
+		notrade: true
+		nodrop: true
+		nocart: true
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	Script: <"
+		getitem TreasureMap, 1;
+	">
+	}
+},
+{
+	Id: 5354
+	AegisName: "RubberDucky"
+	Name: "Rubber Ducky"
+	Type: "IT_USABLE"
+	Buy: 200
+	Sell: 100
+	Weight: 30
+	Refine: false
+	ViewSprite: 5354
+	KeepAfterUse: true
+	Script: <"
+		callfunc "rubberDuck";
+	">
+},
+{
+	Id: 5364
+	AegisName: "ButterButterfly"
+	Name: "Butter Butterfly"
+	Type: "IT_USABLE"
+	Buy: 500
+	Sell: 250
+	Weight: 1
+	Refine: false
+	ViewSprite: 5364
+	Script: <"
+		callfunc "itheal", 55, 0;
+	">
+},
+{
+	Id: 5373
+	AegisName: "JunglefowlEgg"
+	Name: "Junglefowl Egg"
+	Type: "IT_USABLE"
+	Buy: 400
+	Sell: 200
+	Weight: 4
+	Refine: false
+	ViewSprite: 5373
+	Script: <"
+		callfunc "itheal", 300, 0;
+	">
+},
+{
+	Id: 5374
+	AegisName: "KingChonkyBirbEgg"
+	Name: "King Chonky Birb Egg"
+	Type: "IT_USABLE"
+	Buy: 1500
+	Sell: 750
+	Weight: 22
+	Refine: false
+	ViewSprite: 5374
+	Script: <"
+		callfunc "itheal", 800, 0;
+	">
+},
+{
+	Id: 5379
+	AegisName: "Sauerkraut"
+	Name: "Sauerkraut"
+	Type: "IT_USABLE"
+	Buy: 250
+	Sell: 125
+	Weight: 10
+	Refine: false
+	ViewSprite: 5379
+	Script: <"
+		callfunc "itheal", 500, 0;
 	">
 },
 /* Legs Armor */
