--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -141,9 +141,9 @@ mob_db: (
 	MutationCount: 2
 	MutationStrength: 30
 	Drops: {
-		MaggotSlime: 800
+		InsectSlime: 800
 		CactusDrink: 150
-		BugLeg: 800
+		InsectLeg: 800
 		CactusPotion: 150
 		Dagger: 70
 		SharpKnife: 10
@@ -192,9 +192,9 @@ mob_db: (
 	MutationCount: 2
 	MutationStrength: 40
 	Drops: {
-		MaggotSlime: 800
+		InsectSlime: 800
 		CactusDrink: 150
-		BugLeg: 400
+		InsectLeg: 400
 		RoastedMaggot: 150
 		Dagger: 70
 		SharpKnife: 1
@@ -243,8 +243,8 @@ mob_db: (
 	MutationCount: 2
 	MutationStrength: 40
 	Drops: {
-		MaggotSlime: 1000
-		BugLeg: 800
+		InsectSlime: 1000
+		InsectLeg: 800
 		RoastedMaggot: 400
 	}
 },
@@ -334,8 +334,10 @@ mob_db: (
 	Drops: {
 		IronPotion: 800
 		CactusDrink: 150
-		BugLeg: 50
+		InsectLeg: 50
 		HardSpike: 400
+		Fungus: 30
+		MushroomSpores: 100
 		ShroomHat: (1, "ODG_BASICSTAT")
 	}
 },
@@ -700,6 +702,7 @@ mob_db: (
 	MutationStrength: 60
 	Drops: {
 		SilkCocoon: 1000
+		ButterButterfly: 100
 	}
 },
 {
@@ -742,9 +745,10 @@ mob_db: (
 	DamageMotion: 480
 	Drops: {
 		AngryScorpionStinger: 700
+		ScorpionClaw: 350
 		Candy: 100
 		ChocolateBar: 50
-		BugLeg: 700
+		InsectLeg: 700
 	}
 },
 {
@@ -788,13 +792,14 @@ mob_db: (
 	MutationCount: 2
 	MutationStrength: 30
 	Drops: {
-		MaggotSlime: 800
+		InsectSlime: 800
 		CactusDrink: 150
-		BugLeg: 800
+		InsectLeg: 800
 		CactusPotion: 150
 		Dagger: 70
 		SharpKnife: 10
 		IceCube: 500
+		Snowflake: 500
 	}
 },
 {
@@ -939,7 +944,7 @@ mob_db: (
 		InfantryHelmet: (100, "ODG_BASICSTAT")
 		CoinBag: 500
 		IronOre: 300
-		BugLeg: 1000
+		InsectLeg: 1000
 		GreenApple: 500
 		Coal: 150
 	}
@@ -986,7 +991,7 @@ mob_db: (
 	MutationStrength: 30
 	Drops: {
 		LeatherShirt: (300, "ODG_BASICSTAT")
-		BugLeg: 1000
+		InsectLeg: 1000
 		ChocolateBar: 300
 		GingerBreadMan: 300
 		RedApple: 500
@@ -1035,7 +1040,7 @@ mob_db: (
 	MutationStrength: 30
 	Drops: {
 		GrubSlime: 2000
-		BugLeg: 1000
+		InsectLeg: 1000
 		GrassSeed: 300
 		ReedBundle: 300
 	}
@@ -1133,6 +1138,7 @@ mob_db: (
 		BookPage: 200
 		SilverMirror: 20
 		Diamond: 20
+		Snowflake: 100
 	}
 },
 {
@@ -1353,9 +1359,9 @@ mob_db: (
 	MutationCount: 2
 	MutationStrength: 30
 	Drops: {
-		MaggotSlime: 800
+		InsectSlime: 800
 		CactusDrink: 150
-		BugLeg: 800
+		InsectLeg: 800
 		CactusPotion: 150
 		Dagger: 70
 		SharpKnife: 10
@@ -1413,6 +1419,7 @@ mob_db: (
 		PollettEgg: 400
 		WhiteFur: 500
 		Snowball: 3000
+		Snowflake: 500
 	}
 },
 {
@@ -1458,8 +1465,9 @@ mob_db: (
 	Drops: {
 		LeatherShirt: (150, "ODG_BASICSTAT")
 		ChocolateBar: 100
-		BugLeg: 800
+		InsectLeg: 800
 		BlackScorpionStinger: 900
+		BlackScorpionClaw: 350
 	}
 },
 {
@@ -1605,6 +1613,8 @@ mob_db: (
 		CoinBag: 400
 		SmallMushroom: 1000
 		SmallMushroom: 1000
+		Fungus: 30
+		MushroomSpores: 100
 		MushHat: (1, "ODG_BASICSTAT")
 	}
 },
@@ -2290,6 +2300,7 @@ mob_db: (
 		ConcentrationPotion: 400
 		StandardHeadband: (900, "ODG_BASICSTAT")
 		SilkHeadband: (250, "ODG_BASICSTAT")
+		Snowflake: 1000
 	}
 },
 {
@@ -2438,6 +2449,7 @@ mob_db: (
 	Drops: {
 		IceCube: 5000
 		IcedWater: 800
+		Snowflake: 1000
 	}
 },
 {
@@ -2574,6 +2586,8 @@ mob_db: (
 		Amethyst: 50
 		IronPotion: 100
 		SmallMushroom: 1000
+		Fungus: 30
+		MushroomSpores: 100
 		JoyplimScroll: 40
 	}
 },
@@ -3131,10 +3145,12 @@ mob_db: (
 	MutationStrength: 60
 	Drops: {
 		SmallMushroom: 500
-		BugLeg: 500
+		InsectLeg: 500
 		SulphurPowder: 400
 		Lifestone: 300
 		EmptyBottle: 100
+		Fungus: 30
+		MushroomSpores: 100
 		JoyplimScroll: 50
 		MoonshroomHat: (1, "ODG_BASICSTAT")
 	}
@@ -3333,9 +3349,9 @@ mob_db: (
 	AttackMotion: 672
 	DamageMotion: 480
 	Drops: {
-		MaggotSlime: 400
+		InsectSlime: 400
 		CactusDrink: 70
-		BugLeg: 200
+		InsectLeg: 200
 		RoastedMaggot: 75
 		CactusPotion: 30
 	}
@@ -4250,9 +4266,9 @@ mob_db: (
 	MutationCount: 2
 	MutationStrength: 40
 	Drops: {
-		MaggotSlime: 800
+		InsectSlime: 800
 		CactusDrink: 150
-		BugLeg: 400
+		InsectLeg: 400
 		RoastedMaggot: 150
 		Dagger: 70
 		SharpKnife: 1
@@ -4299,9 +4315,9 @@ mob_db: (
 	AttackMotion: 672
 	DamageMotion: 480
 	Drops: {
-		MaggotSlime: 800
+		InsectSlime: 800
 		CactusDrink: 150
-		BugLeg: 400
+		InsectLeg: 400
 		RoastedMaggot: 150
 		CactusPotion: 70
 		SharpKnife: 10
@@ -4447,8 +4463,9 @@ mob_db: (
 	Drops: {
 		LeatherShirt: (150, "ODG_BASICSTAT")
 		ChocolateBar: 100
-		BugLeg: 800
+		InsectLeg: 800
 		BlackScorpionStinger: 800
+		BlackScorpionClaw: 350
 	}
 },
 {
@@ -4494,6 +4511,8 @@ mob_db: (
 		Amethyst: 50
 		IronPotion: 100
 		SmallMushroom: 1000
+		Fungus: 30
+		MushroomSpores: 100
 	}
 },
 {
@@ -4578,8 +4597,9 @@ mob_db: (
 	MutationStrength: 50
 	Drops: {
 		RedScorpionStinger: 2000
+		RedScorpionClaw: 350
 		ChocolateBar: 100
-		BugLeg: 500
+		InsectLeg: 500
 		Bow: 10
 		Arrow: 760
 		Knife: 540
@@ -4628,7 +4648,7 @@ mob_db: (
 	Drops: {
 		Arrow: 900
 		CherryCake: 100
-		BugLeg: 750
+		InsectLeg: 750
 		CactusDrink: 5000
 		CactusPotion: 3000
 		CasinoCoins: 11
@@ -4916,7 +4936,7 @@ mob_db: (
 	MutationStrength: 30
 	Drops: {
 		CactusDrink: 150
-		BugLeg: 400
+		InsectLeg: 400
 		RoastedMaggot: 150
 		Dagger: 70
 		SharpKnife: 1
@@ -5046,7 +5066,6 @@ mob_db: (
 		Bloodstone: 500
 		Bloodstone: 500
 		DarkCrystal: 500
-		SmallMushroom: 500
 		DiseasedHeart: 800
 	}
 },
@@ -5444,7 +5463,7 @@ mob_db: (
 	Drops: {
 		RedApple: 800
 		Orange: 800
-		BugLeg: 500
+		InsectLeg: 500
 		Candy: 1000
 		Pearl: 100
 		Arrow: 5000
@@ -5498,7 +5517,7 @@ mob_db: (
 	Drops: {
 		RedApple: 800
 		Orange: 800
-		BugLeg: 500
+		InsectLeg: 500
 		Candy: 1000
 		Pearl: 100
 		Arrow: 5000
@@ -5863,7 +5882,7 @@ mob_db: (
 	Drops: {
 		RedApple: 800
 		Orange: 800
-		BugLeg: 500
+		InsectLeg: 500
 		Candy: 1000
 		Pearl: 100
 		Arrow: 5000
@@ -6197,9 +6216,9 @@ mob_db: (
 	AttackMotion: 672
 	DamageMotion: 480
 	Drops: {
-		MaggotSlime: 800
+		InsectSlime: 800
 		CactusDrink: 150
-		BugLeg: 400
+		InsectLeg: 400
 		RoastedMaggot: 150
 		CactusPotion: 70
 		SharpKnife: 10
@@ -6244,9 +6263,10 @@ mob_db: (
 	DamageMotion: 480
 	Drops: {
 		ScorpionStinger: 700
+		ScorpionClaw: 350
 		Candy: 100
 		ChocolateBar: 50
-		BugLeg: 700
+		InsectLeg: 700
 	}
 },
 {
@@ -6288,9 +6308,9 @@ mob_db: (
 	AttackMotion: 672
 	DamageMotion: 480
 	Drops: {
-		MaggotSlime: 800
+		InsectSlime: 800
 		CactusDrink: 150
-		BugLeg: 400
+		InsectLeg: 400
 		RoastedMaggot: 150
 		CactusPotion: 70
 		SharpKnife: 10
@@ -6335,9 +6355,10 @@ mob_db: (
 	DamageMotion: 480
 	Drops: {
 		ScorpionStinger: 700
+		ScorpionClaw: 350
 		Candy: 100
 		ChocolateBar: 50
-		BugLeg: 700
+		InsectLeg: 700
 	}
 },
 {
@@ -6611,9 +6632,9 @@ mob_db: (
 	AttackMotion: 672
 	DamageMotion: 480
 	Drops: {
-		MaggotSlime: 800
+		InsectSlime: 800
 		CactusDrink: 150
-		BugLeg: 400
+		InsectLeg: 400
 		RoastedMaggot: 150
 		CactusPotion: 70
 		SharpKnife: 10
@@ -6653,6 +6674,7 @@ mob_db: (
 	Drops: {
 		JackOLantern: 100
 		RubberBat: 20
+		RubberDucky: 20
 		RealisticBrain: 10
 		JarofBlood: 15
 		PumpkinSeeds: 500
@@ -6876,9 +6898,9 @@ mob_db: (
 	AttackMotion: 672
 	DamageMotion: 480
 	Drops: {
-		MaggotSlime: 800
+		InsectSlime: 800
 		CactusDrink: 150
-		BugLeg: 400
+		InsectLeg: 400
 		Milk: 50
 		Milk: 30
 	}
@@ -7203,7 +7225,7 @@ mob_db: (
 	MutationStrength: 30
 	Drops: {
 		HyvernStinger: 2000
-		BugLeg: 1000
+		InsectLeg: 1000
 		Orange: 600
 		IronArrow: 3000
 	}
@@ -7302,6 +7324,7 @@ mob_db: (
 		IcedWater: 700
 		SilverMirror: 50
 		BookPage: 500
+		Snowflake: 100
 	}
 },
 {
@@ -7499,6 +7522,7 @@ mob_db: (
 	MutationStrength: 20
 	Drops: {
 		RubberBat: 10
+		RubberDucky: 10
 		RealisticBrain: 5
 		JarofBlood: 9
 		PumpkinSeeds: 250
@@ -7999,8 +8023,8 @@ mob_db: (
 	MutationCount: 1
 	MutationStrength: 60
 	Drops: {
-		MaggotSlime: 1000
-		BugLeg: 800
+		InsectSlime: 1000
+		InsectLeg: 800
 		RoastedMaggot: 400
 		EmptyBottle: 10
 		CoinBag: 400
@@ -8140,8 +8164,8 @@ mob_db: (
 	MutationCount: 3
 	MutationStrength: 30
 	Drops: {
-		BugLeg: 2500
-		MaggotSlime: 2000
+		InsectLeg: 2500
+		InsectSlime: 2000
 		IronOre: 600
 		Coal: 800
 		SilverOre: 100
@@ -8243,9 +8267,11 @@ mob_db: (
 	MutationCount: 2
 	MutationStrength: 30
 	Drops: {
-		CherryCake: 770
-		BugLeg: 350
-		ChickenLeg: 1000
+		DuckEgg: 400
+		DuckFeather: 550
+		BirdLeg: 500
+		AnimalBones: 250
+		RubberDucky: 100
 	}
 },
 {
@@ -8331,8 +8357,9 @@ mob_db: (
 	MutationCount: 2
 	MutationStrength: 30
 	Drops: {
-		MaggotSlime: 600
-		BugLeg: 200
+		InsectSlime: 600
+		InsectLeg: 200
+		FreeRangeMoss: 100
 	}
 },
 {
@@ -8374,8 +8401,9 @@ mob_db: (
 	MutationCount: 2
 	MutationStrength: 30
 	Drops: {
-		MaggotSlime: 700
-		BugLeg: 300
+		InsectSlime: 700
+		InsectLeg: 300
+		FreeRangeMoss: 150
 	}
 },
 {
@@ -8544,6 +8572,9 @@ mob_db: (
 	MutationCount: 1
 	MutationStrength: 80
 	Drops: {
+		Manana: 1000
+		Manana: 500
+		Manana: 250
 		RawLog: 1000
 		RawLog: 2000
 		ReedBundle: 500
@@ -8592,9 +8623,12 @@ mob_db: (
 	MutationCount: 2
 	MutationStrength: 40
 	Drops: {
-		CherryCake: 1005
-		BugLeg: 400
-		ChickenLeg: 2000
+		DuckEgg: 1000
+		DuckFeather: 1100
+		BirdLeg: 1000
+		BirdLeg: 500
+		AnimalBones: 500
+		RubberDucky: 200
 	}
 },
 {
@@ -8636,8 +8670,10 @@ mob_db: (
 	ViewRange: 7
 	ChaseRange: 11
 	Drops: {
-		ChickenLeg: 2520
-		ChickenLeg: 1520
+		JunglefowlEgg: 1000
+		JunglefowlFeather: 1100
+		BirdLeg: 1000
+		BirdLeg: 500
 		AnimalBones: 500
 	}
 },
@@ -8718,9 +8754,9 @@ mob_db: (
 	MutationCount: 2
 	MutationStrength: 100
 	Drops: {
-		Honey: 1000
-		Honey: 750
-		Honey: 500
+		Honeycomb: 1000
+		Honeycomb: 750
+		Honeycomb: 500
 	}
 },
 {
@@ -8758,8 +8794,10 @@ mob_db: (
 	AttackDelay: 1872
 	AttackMotion: 672
 	DamageMotion: 480
-	WeaponAttacks: {
-		Bows: 5000
+	Drops: {
+		TortugaShellFragment: 400
+		TortugaShell: 100
+		FreeRangeMoss: 200
 	}
 },
 {
@@ -8798,6 +8836,12 @@ mob_db: (
 	AttackDelay: 1572
 	AttackMotion: 672
 	DamageMotion: 480
+	Drops: {
+		RattoTail: 500
+		RattoTeeth: 400
+		Bread: 200
+		Cheese: 100
+	}
 },
 {
 	Id: 1193
@@ -8833,6 +8877,10 @@ mob_db: (
 	AttackDelay: 1872
 	AttackMotion: 672
 	DamageMotion: 200
+	Drops: {
+		CrocClaw: 350
+		Croconut: 200
+	}
 },
 {
 	Id: 1194
@@ -8873,28 +8921,35 @@ mob_db: (
 	AttackDelay: 2100
 	AttackMotion: 672
 	DamageMotion: 200
+	Drops: {
+		KingChonkyBirbEgg: 1000
+		KingChonkyBirbFeather: 1100
+		BirdLeg: 1000
+		BirdLeg: 500
+		AnimalBones: 500
+	}
 },
 {
 	Id: 1195
 	SpriteName: "Brainblow"
 	Name: "Brainblow"
 	Lv: 77
-	Hp: 200
+	Hp: 7
 	Sp: 0
 	Exp: 100
 	JExp: 50
 	AttackRange: 1
-	Attack: [10, 10]
+	Attack: [100, 100]
 	Def: 0
 	Mdef: 0
 	CriticalDef: 0
 	Stats: {
 		Str: 1
-		Agi: 7
+		Agi: 77
 		Vit: 1
 		Int: 1
-		Dex: 123
-		Luk: 123
+		Dex: 77
+		Luk: 77
 	}
 	ViewRange: 9
 	ChaseRange: 10
@@ -8909,7 +8964,7 @@ mob_db: (
 		ChangeTargetChase: true
 	}
 	MoveSpeed: 77
-	AttackDelay: 500
+	AttackDelay: 100
 	AttackMotion: 672
 	DamageMotion: 200
 },
@@ -8948,7 +9003,7 @@ mob_db: (
 		ChangeTargetChase: true
 	}
 	MoveSpeed: 120
-	AttackDelay: 800
+	AttackDelay: 555
 	AttackMotion: 672
 	DamageMotion: 200
 	Drops: {
