--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -51,6 +51,7 @@ npc: npc/items/launcher_ammo.txt
 npc: npc/items/check_wand.txt
 npc: npc/items/mirror.txt
 npc: npc/items/rubber_bat.txt
+npc: npc/items/rubber_duck.txt
 npc: npc/items/scentedcandle.txt
 npc: npc/items/tmwgift.txt
 npc: npc/items/brawling_item.txt
