--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -64,6 +64,7 @@ npc: npc/items/underworld_troll.txt
 npc: npc/items/silver_bell.txt
 
 // Mob Functions
+npc: npc/mobs/miner_mania.txt
 npc: npc/mobs/mob_points.txt
 npc: npc/mobs/mob_kill_handler.txt
 
