--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -1611,7 +1611,12 @@ item_db: (
 	Loc: "EQP_HAND_R"
 	Refine: false
 	ViewSprite: 910
+	DontUseAmmo: true
 	Subtype: "W_BOW"
+	Script: <"
+		//set @LauncherType, AMMO_DONT_USE; // @TMWA
+		//callfunc "CheckLauncher"; // @TMWA
+	">
 },
 {
 	Id: 1227
@@ -16237,9 +16242,8 @@ item_db: (
 		} else { //@EVOL2
 			doevent "Shovel::OnDig"; //@EVOL2
 		} //@EVOL2
-		//getitem IronShovel, 1; // @TMWA
+		//callfunc "useShovel"; // @TMWA
 	">
-	// TODO: add keep after use flag to evolved.py and tmwa and replicate the 5 lines above
 },
 {
 	Id: 5330
@@ -16542,7 +16546,8 @@ item_db: (
 		noauction: true
 		noselltonpc: true
 	Script: <"
-		getitem PirateTreasureMap, 1;
+		set @MapName$, "PirateTreasureMap";
+		callfunc "readMap";
 	">
 	}
 },
@@ -16565,7 +16570,8 @@ item_db: (
 		noauction: true
 		noselltonpc: true
 	Script: <"
-		getitem DungeonMap, 1;
+		set @MapName$, "DungeonMap";
+		callfunc "readMap";
 	">
 	}
 },
@@ -16588,7 +16594,8 @@ item_db: (
 		noauction: true
 		noselltonpc: true
 	Script: <"
-		getitem TreasureMap, 1;
+		set @MapName$, "TreasureMap";
+		callfunc "readMap";
 	">
 	}
 },
