--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -62,6 +62,8 @@ npc: npc/items/love_potion.txt
 npc: npc/items/manapearl_item.txt
 npc: npc/items/underworld_troll.txt
 npc: npc/items/silver_bell.txt
+npc: npc/items/shovel.txt
+npc: npc/items/maps.txt
 
 // Mob Functions
 npc: npc/mobs/miner_mania.txt
