Pumpkin to RipePumpkin

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -16473,8 +16473,8 @@ item_db: (
 },
 {
 	Id: 5347
-	AegisName: "Pumpkin"
-	Name: "Pumpkin"
+	AegisName: "RipePumpkin"
+	Name: "RipePumpkin"
 	Type: "IT_USABLE"
 	Buy: 170
 	Sell: 85
