stones and crystals

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -5860,6 +5860,50 @@ item_db: (
 	Refine: false
 	ViewSprite: 5378
 },
+{
+	Id: 5380
+	AegisName: "Stone"
+	Name: "Stone"
+	Type: "IT_ETC"
+	Buy: 1000
+	Sell: 500
+	Weight: 60
+	Refine: false
+	ViewSprite: 5380
+},
+{
+	Id: 5381
+	AegisName: "Brick"
+	Name: "Brick"
+	Type: "IT_ETC"
+	Buy: 2000
+	Sell: 1000
+	Weight: 40
+	Refine: false
+	ViewSprite: 5381
+},
+{
+	Id: 5384
+	AegisName: "MountainCrystal"
+	Name: "MountainCrystal"
+	Type: "IT_ETC"
+	Buy: 20000
+	Sell: 10000
+	Weight: 20
+	Refine: false
+	ViewSprite: 5384
+},
+{
+	Id: 5385
+	AegisName: "BlackQuarz"
+	Name: "BlackQuarz"
+	Type: "IT_ETC"
+	Buy: 20000
+	Sell: 10000
+	Weight: 20
+	Refine: false
+	ViewSprite: 5385
+},
 /* Chest Armor */
 {
 	Id: 523
@@ -16669,6 +16713,56 @@ item_db: (
 	Script: <"
 		callfunc "itheal", 500, 0;
 	">
+},
+{
+	Id: 5382
+	AegisName: "AnchorStone"
+	Name: "AnchorStone"
+	Type: "IT_USABLE"
+	Buy: 90000
+	Sell: 45000
+	Weight: 40
+	Refine: false
+	ViewSprite: 5382
+	KeepAfterUse: true
+	Trade: {
+		notrade: true
+		nodrop: true
+		nocart: true
+		nomail: true
+		noauction: true
+		noselltonpc: true
+	Script: <"
+		set @StoneName$, "AnchorStone";
+		callfunc "useAnchorStone";
+	">
+	}
+},
+{
+	Id: 5383
+	AegisName: "AnchoredAnchorStone"
+	Name: "AnchoredAnchorStone"
+	Type: "IT_USABLE"
+	Buy: 0
+	Sell: 0
+	Weight: 40
+	Refine: false
+	ViewSprite: 5383
+	KeepAfterUse: true
+	Trade: {
+		notrade: true
+		nodrop: true
+		nocart: true
+		nomail: true
+		noauction: true
+		noselltonpc: true
+		nostorage: true
+		nogstorage: true
+	Script: <"
+		set @StoneName$, "AnchoredAnchorStone";
+		callfunc "useAnchorStone";
+	">
+	}
 },
 /* Legs Armor */
 {
