--- a/world/map/npc/scripts.conf
+++ b/world/map/npc/scripts.conf
@@ -64,6 +64,7 @@ npc: npc/items/underworld_troll.txt
 npc: npc/items/silver_bell.txt
 npc: npc/items/shovel.txt
 npc: npc/items/maps.txt
+npc: npc/items/anchor_stone.txt
 
 // Mob Functions
 npc: npc/mobs/miner_mania.txt
