stones and crystals mobs

--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -7789,7 +7789,7 @@ mob_db: (
 	MutationStrength: 40
 	Drops: {
 		TreasureKey: 500
-		RedApple: 100
+		MountainCrystal: 100
 		InfantryHelmet: 20
 		CoinBag: 200
 		Diamond: 20
@@ -7829,7 +7829,6 @@ mob_db: (
 	Element: (6, 4)
 	Mode: {
 		CanMove: true
-		Looter: true
 		Assist: true
 		Boss: true
 		CanAttack: true
@@ -7843,6 +7842,9 @@ mob_db: (
 	MutationCount: 0
 	MutationStrength: 0
 	Drops: {
+		MountainCrystal: 400
+		MountainCrystal: 200
+		MountainCrystal: 100
 		Diamond: 50
 		Ruby: 50
 		Emerald: 50
@@ -7880,7 +7882,7 @@ mob_db: (
 	Element: (6, 4)
 	Mode: {
 		CanMove: true
-		Aggressive: true
+		Assist: true
 		Boss: true
 		CanAttack: true
 		ChangeTargetMelee: true
@@ -7893,7 +7895,15 @@ mob_db: (
 	MutationCount: 0
 	MutationStrength: 0
 	Drops: {
-		DarkCrystal: 10000
+		BlackQuarz: 400
+		BlackQuarz: 200
+		BlackQuarz: 100
+		Diamond: 50
+		Ruby: 50
+		Emerald: 50
+		Sapphire: 50
+		Topaz: 50
+		Amethyst: 50
 	}
 },
 {
@@ -8216,7 +8226,7 @@ mob_db: (
 	MutationStrength: 30
 	Drops: {
 		TreasureKey: 800
-		RedApple: 200
+		MountainCrystal: 400
 		InfantryHelmet: 35
 		CoinBag: 400
 		Diamond: 35
@@ -9166,9 +9176,9 @@ mob_db: (
 		Coal: 200
 		IronOre: 200
 		CopperOre: 40
-		SilverOre: 300
-		SilverOre: 150
-		BromenalOre: 20
+		BromenalOre: 30
+		SilverOre: 200
+		SilverOre: 100
 		GoldOre: 10
 	}
 },
@@ -9219,9 +9229,9 @@ mob_db: (
 		Coal: 200
 		IronOre: 200
 		CopperOre: 40
-		SilverOre: 30
-		BromenalOre: 200
-		BromenalOre: 100
+		BromenalOre: 300
+		BromenalOre: 150
+		SilverOre: 20
 		GoldOre: 10
 	}
 },
@@ -9270,8 +9280,8 @@ mob_db: (
 		Coal: 200
 		IronOre: 200
 		CopperOre: 40
-		SilverOre: 30
-		BromenalOre: 20
+		BromenalOre: 30
+		SilverOre: 20
 		GoldOre: 100
 		GoldOre: 50
 	}
@@ -9324,8 +9334,8 @@ mob_db: (
 		IronOre: 2000
 		IronOre: 1000
 		CopperOre: 40
-		SilverOre: 30
-		BromenalOre: 20
+		BromenalOre: 30
+		SilverOre: 20
 		GoldOre: 10
 	}
 },
@@ -9377,8 +9387,8 @@ mob_db: (
 		Coal: 1000
 		IronOre: 200
 		CopperOre: 40
-		SilverOre: 30
-		BromenalOre: 20
+		BromenalOre: 30
+		SilverOre: 20
 		GoldOre: 10
 	}
 },
@@ -9418,8 +9428,8 @@ mob_db: (
 		IronOre: 800
 		Coal: 1000
         CopperOre: 200
-		SilverOre: 150
-		BromenalOre: 100
+		BromenalOre: 150
+		SilverOre: 100
 		GoldOre: 50
 	}
 },
@@ -9459,8 +9469,8 @@ mob_db: (
 		IronOre: 1600
 		Coal: 2000
         CopperOre: 400
-		SilverOre: 300
-		BromenalOre: 200
+		BromenalOre: 300
+		SilverOre: 200
 		GoldOre: 100
 	}
 },
@@ -9500,8 +9510,8 @@ mob_db: (
 		IronOre: 400
 		Coal: 500
 		CopperOre: 100
-		SilverOre: 75
-		BromenalOre: 50
+		BromenalOre: 75
+		SilverOre: 50
 		GoldOre: 25
 	}
 },
@@ -10308,7 +10318,6 @@ mob_db: (
 	Element: (6, 4)
 	Mode: {
 		CanMove: true
-		Looter: true
 		Assist: true
 		Boss: true
 		CanAttack: true
@@ -10322,12 +10331,116 @@ mob_db: (
 	MutationCount: 0
 	MutationStrength: 0
 	Drops: {
+		Charcoal: 2000
 		Charcoal: 1000
 		Charcoal: 500
-		Charcoal: 250
-		Coal: 5000
-		Coal: 2500
-		Coal: 1250
+		Coal: 4000
+		Coal: 2000
+		Coal: 1000
+		IronOre: 500
+		IronPowder: 1200
+	}
+},
+{
+	Id: 1225
+	SpriteName: "StoneSlime"
+	Name: "Stone Slime"
+	Lv: 40
+	Hp: 600
+	Sp: 0
+	Exp: 200
+	JExp: 18
+	AttackRange: 1
+	Attack: [60, 90]
+	Def: 20
+	Mdef: 30
+	CriticalDef: 0
+	Stats: {
+		Str: 20
+		Agi: 30
+		Vit: 10
+		Int: 10
+		Dex: 30
+		Luk: 30
+	}
+	ViewRange: 9
+	ChaseRange: 10
+	Size: 1
+	Race: 0
+	Element: (1, 1)
+	Mode: {
+		CanMove: true
+		Looter: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 1200
+	AttackDelay: 1872
+	AttackMotion: 672
+	DamageMotion: 480
+	MutationCount: 1
+	MutationStrength: 20
+	Drops: {
+		Stone: 1000
+		Stone: 500
+		Stone: 250
+		Brick: 100
+		Coal: 200
+		IronOre: 200
+		CopperOre: 40
+		BromenalOre: 30
+		SilverOre: 20
+		GoldOre: 10
+	}
+},
+{
+	Id: 1226
+	SpriteName: "StoneGolem"
+	Name: "Stone Golem"
+	Lv: 180
+	Hp: 30000
+	Sp: 280
+	Exp: 70000
+	JExp: 2400
+	AttackRange: 3
+	Attack: [170, 190]
+	Def: 75
+	Mdef: 40
+	CriticalDef: 0
+	Stats: {
+		Str: 35
+		Agi: 26
+		Vit: 99
+		Int: 127
+		Dex: 255
+		Luk: 105
+	}
+	ViewRange: 31
+	ChaseRange: 30
+	Size: 1
+	Race: 0
+	Element: (6, 4)
+	Mode: {
+		CanMove: true
+		Assist: true
+		Boss: true
+		CanAttack: true
+		ChangeTargetMelee: true
+		ChangeTargetChase: true
+	}
+	MoveSpeed: 320
+	AttackDelay: 1000
+	AttackMotion: 672
+	DamageMotion: 50
+	MutationCount: 0
+	MutationStrength: 0
+	Drops: {
+		Stone: 2000
+		Stone: 1000
+		Stone: 500
+		Brick: 200
+		Coal: 500
 		IronOre: 500
 		IronPowder: 1200
 	}
