quarz to quartz

--- a/world/map/db/item_db.conf
+++ b/world/map/db/item_db.conf
@@ -5895,8 +5895,8 @@ item_db: (
 },
 {
 	Id: 5385
-	AegisName: "BlackQuarz"
-	Name: "BlackQuarz"
+	AegisName: "BlackQuartz"
+	Name: "BlackQuartz"
 	Type: "IT_ETC"
 	Buy: 20000
 	Sell: 5000
