--- a/world/map/db/mob_db.conf
+++ b/world/map/db/mob_db.conf
@@ -7895,9 +7895,9 @@ mob_db: (
 	MutationCount: 0
 	MutationStrength: 0
 	Drops: {
-		BlackQuarz: 400
-		BlackQuarz: 200
-		BlackQuarz: 100
+		BlackQuartz: 400
+		BlackQuartz: 200
+		BlackQuartz: 100
 		Diamond: 50
 		Ruby: 50
 		Emerald: 50
